# rbq_ros2

./: .gitignore  LICENSE  README.md
.github/workflows/: colcon.yml
rbq_msgs/: CMakeLists.txt  package.xml
rbq_msgs/msg/: BatteryState.msg  ContactInfo.msg  FootStates.msg  HighLevelCommand.msg  JointInfo.msg  JointOwnershipCmd.msg  JointRef.msg  LegJointInfo.msg  MotionRef.msg  RobotStatus.msg  SimInfo.msg  SystemLog.msg  TargetGo.msg  TaskInfo.msg  UserCommand.msg
