<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rbq_msgs</name>
  <!-- Placeholder. The published version is stamped from src/rcl/version.txt by
       scripts/sync_ros2.bash; 0.0.0 marks this as never-released-as-is. -->
  <version>1.19.30</version>
  <description>Message definitions for the RBQ quadruped robot</description>
  <maintainer email="gurban@rainbow-robotics.com">Gurban</maintainer>
  <license>Apache-2.0</license>
  <author>Gurban</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
